--- a/src/main/resources/templates/dashboard-coordinador.html
+++ b/src/main/resources/templates/dashboard-coordinador.html
@@ -263,7 +263,7 @@
                 const g = data.general;
                 let html = `
                 <h3 class="fw-bold mb-4" style="color: #493f5d;">📊 Reportes y Estadísticas</h3>
-                <p class="text-muted mb-4">Aquí se visualizan los indicadores clave de rendimiento (KPIs) sobre cupos, carga académica y eficiencia.</p>
+<!--                <p class="text-muted mb-4">Aquí se visualizan los indicadores clave de rendimiento (KPIs) sobre cupos, carga académica y eficiencia.</p>-->
 
                 <!-- CARDS RESUMEN -->
                 <div class="row g-4 mb-5">
